forth/test/fail/test_too_many_comptime_arg_regs.af
\ Must fail to compile.
fun: test_too_many_comptime_arg_regs_fail { -- err }
  0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16
  0
end
